final final commit

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             </ul>
         </nav>
         <a class="btn button-1">get an invite</a>
+        <!-- <div id="madre" class="grid-17">
+            <a href="" class="button-3"><span class="red"></span>an invite</a>
+        </div> -->
+        
     </header>
 
     <!-- stories -->
